# d4-bike-computer

./: .gitignore  CMakeLists.txt  cbuf.c  cbuf.h  hes.c  hes.h  interface.c  interface.h  linecount.py  main.c  main.cpp  radio.c  radio.h  uart.c  uart.h  uart_rx.pio  uart_tx.pio
arcana_lcd_rp2040/: CMakeLists.txt  default5x7.h  lcd_draw.c  lcd_driver.pio  lcd_hl.h  lcd_misc.c  lcd_text.c  lcd_util.h
build_scripts/: pre_build.cmake
